--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~/project/react-mentions
+  working_directory: ~/project/lab-react-mentions
   docker:
     - image: circleci/node:8-browsers
       environment:
@@ -42,7 +42,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project
           paths:
-            - react-mentions
+            - lab-react-mentions
 
   lint:
     <<: *defaults
